src/corelib/io/qfilesystemmetadata_p.h
@@ -337,6 +337,9 @@ inline void QFileSystemMetaData::fillFromFileAttribute(DWORD fileAttribute,bool 
     entryFlags |= ((fileAttribute & FILE_ATTRIBUTE_DIRECTORY) ? DirectoryType: FileType);
     entryFlags |= ExistsAttribute;
     knownFlagsMask |= FileType | DirectoryType | HiddenAttribute | ExistsAttribute;
+
+    // this function is never called for a .lnk file
+    knownFlagsMask |= WinLnkType;
 }
 
 inline void QFileSystemMetaData::fillFromFindData(WIN32_FIND_DATA &findData, bool setLinkType, bool isDriveRoot)
